environments/overlays/staging/broadcaster_staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcast-dep
  labels:
    app: broadcast-pod
spec:
  template:
    spec:
      containers:
      - name: broadcast-container
