environments/overlays/staging/deployment_db_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  template:
    spec:
      containers:
      - name: backend
